[package]
name = "progress"
version = "0.1.1"
edition = "2021"
authors = ["Michel Casabianca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dateparser = { version = "0.2.1" }
chrono = { version = "0.4.34" }

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Link time optimizatin, removes dead code
codegen-units = 1 # Allow for maximum size reduction optimizations
# panic = "abort"   # Don't print stack trace on panic
# Set RUSTFLAGS="-Zlocation-detail=none" to remove file, line and column information
